--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.3",
+    "pdfjs-dist": "^2.13.216",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
