--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "agora-rtc-sdk": "^3.6.10",
+    "agora-rtc-sdk-ng": "^4.11.1",
     "antd": "^4.20.5",
     "axios": "^0.27.2",
     "base64topdf": "^1.1.8",
     "env": "^0.0.2",
+    "firebase": "^9.8.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "moment": "^2.29.3",
@@ -27,6 +30,7 @@
     "react-toastify": "^9.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.4"
   },
